# Bitset

./: .kateproject  CMakeLists.txt
.cache/clangd/index/: bitset.c.1BFE7C358714696E.idx  bitset.h.2EDED836EEB1E6DD.idx  test.c.913D416A18568356.idx
include/: bitset.h
src/: bitset.c
test/: test.c
